Fixed java version conflicts